content/boundary/v1.0.x/content/docs/deploy/self-managed/deploy-workers.mdx
---
layout: docs
page_title: Deploy Boundary workers
description: >-
 Configure Boundary workers for a self-managed deployment, including environment files and KMS keys. Set up ingress, intermediary, and egress roles for multi-hop.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-11-18T17:04:41-05:00
last_modified: 2026-01-26T13:07:13-05:00
# END AUTO GENERATED METADATA
---

# Deploy Boundary workers

Deploying Boundary workers gives your cluster ingress, intermediary, and egress nodes that relay client sessions across network boundaries using multi-hop routing. Before you begin, you should have completed the following steps:

- Installed Boundary on at least three [controller nodes](/boundary/docs/deploy/self-managed/configure-controllers).
- Prepared or have three existing network boundaries:
   - Public/DMZ network
   - Intermediary network
   - Private network
- Prepared three virtual machines for Boundary workers, one in each network boundary with the Boundary binary installed on it.

@include 'alerts/enterprise-only.mdx'

In the following configuration files, there are common configuration components as well as some unique components depending on the role the Boundary worker performs.
There are three files, one for each worker in a unique network boundary.
Additionally, Boundary supports a [multi-hop configuration](/boundary/docs/workers/multi-hop) in which the Boundary workers can serve one of three purposes: an ingress worker, an ingress/egress worker, or an egress worker.

## Prepare the environment files

HashiCorp recommends using either the `env://` or `file://` notation within the configuration files, to securely provide secret configuration components to the Boundary worker binaries.

The following configuration example uses `env://` to secure AWS KMS configuration items.

When you install the Boundary binary using a package manager, it includes a unit file which configures an environment file at `/etc/boundar.d/boundary.env`.

You can use this file to set sensitive values in the Boundary worker configuration file.

The following file is an example of how this environment file could be configured:

<CodeBlockConfig lineNumbers filename="/etc/boundary.d/boundary.env">

```shell-session
AWS_ACCESS_KEY_ID=AKIAIOSFODNN7EXAMPLE
AWS_SECRET_ACCESS_KEY=wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
```

</CodeBlockConfig>

In the example above, the proper IAM (Identity and Access Management) roles and permissions for the given `AWS_ACCESS_KEY` and `AWS_SECRET_ACCESS_KEY` must be in place so that Boundary can use them to access the different KMS keys.

## Prepare the worker KMS keys

The worker-auth storage KMS key is used by a Worker for the encrypted storage of authentication keys.

This is recommended for workers using controller-led or worker-led registration methods. If not specified, the authentication keys are not encrypted on disk.
Optionally, if you deploy KMS authentication-driven Boundary workers, you must generate an additional KMS key to authenticate the Boundary worker with the controller.

HashiCorp strongly recommends using the Key Management System (KMS) of the cloud provider where you deploy your Boundary workers.

Boundary workers must have the correct level of permissions for interacting with the cloud provider's KMS.

Refer to your cloud provider's documentation for more information.

## Create the worker configurations

After you create the requisite key or keys in the cloud provider of your choice, you can begin configuring the workers.

The following configuration examples all employ the worker-led authorization flow.
For more information on configuring KMS authentication for Boundary workers, refer to the [KMS authentication configuration documentation](/boundary/docs/workers/registration#kms-configuration).

You can configure ingress, intermediary, and egress workers to take advantage of [multi-hop worker capabilities](/boundary/docs/workers#multi-hop-sessions).

Complete the steps below to configure workers.

If you are configuring your workers to support session recording, you will need to add an `auth_storage_path` and configure a storage backend. Refer to the [Configure workers for storage](/boundary/docs/session-recording/configuration/configure-worker-storage) documentation to learn more.

## What do ingress, intermediary, and egress workers do?

"Ingress," "intermediary," and "egress" are general ways to describe how the respective worker interacts with resources.
A worker can serve more than one of those roles at a time.
Refer to [Multi-hop sessions](/boundary/docs/workers/multi-hop) for more information.

### Ingress worker configuration

@include '/workers/ingress-worker-config.mdx'

### Intermediate worker configuration

@include '/workers/intermediate-worker-config.mdx'

### Egress worker configuration

@include '/workers/egress-worker-config.mdx'

## Start the Boundary service

When the configuration files are in place on each Boundary controller, you can proceed to enable and start the binary on each of the Boundary worker nodes using `systemd`.

Run the following commands to enable and start the service:

1. Enable the Boundary service:

  ```shell-session
  $ sudo systemctl enable boundary
  ```

1. Start the Boundary service:

  ```shell-session
  $ sudo systemctl start boundary
  ```

## Manually configure systemd (optional)

If you [installed Boundary manually](/boundary/docs/deploy/self-managed/install#manually-install-boundary), you can configure Boundary to run as a service under systemd.

To do this, you should:

1. Check the location of your worker configuration file on disk, such as `/etc/boundary.d/egress-worker.hcl` in the example on this page. You will need to reference the location to the .hcl configuration file when you set up the unit file in the next steps.
1. Configure the user and group the Boundary service runs under.
1. Set up the systemd unit file.
1. Start the Boundary service.

### Configure the user and group

HashiCorp recommends running Boundary as a non-root user and managing the Boundary process running under systemd with this user.

Add the `boundary` system user and group to ensure you have a no-login user that owns and runs Boundary:

```shell-session
$ sudo adduser --system --group boundary || true ;
$ sudo chown boundary:boundary /etc/boundary.d/worker.hcl ;
$ sudo chown boundary:boundary /usr/local/bin/boundary
```

### Set up the unit file

Create a new unit file, such as `/etc/systemd/system/boundary-worker.service`. Add the following code to the file. Update the path to your worker .hcl config file on the `ExecStart` line, and the user and group as needed.

<CodeBlockConfig filename="/etc/systemd/system/boundary-worker.service">

```bash
[Unit]
Description="HashiCorp Boundary worker"
Documentation=https://developer.hashicorp.com/boundary/docs
StartLimitIntervalSec=60
StartLimitBurst=3

[Service]
EnvironmentFile=-/etc/boundary.d/boundary.env
User=boundary
Group=boundary
ProtectSystem=full
ProtectHome=read-only
ExecStart=/usr/bin/boundary server -config=/etc/boundary.d/egress-worker.hcl
ExecReload=/bin/kill --signal HUP $MAINPID
KillMode=process
KillSignal=SIGINT
Restart=on-failure
RestartSec=5
TimeoutStopSec=30
LimitMEMLOCK=infinity

[Install]
WantedBy=multi-user.target
```

</CodeBlockConfig>

### Start the Boundary service

Set the appropriate permissions on the unit file:

```shell-session
$ sudo chmod 664 /etc/systemd/system/boundary-worker.service
```

Reload the systemd daemon, and enable and start the Boundary service:

```shell-session
$ sudo systemctl daemon-reload ;
$ sudo systemctl enable boundary-worker ;
$ sudo systemctl start boundary-worker
```

## Register the workers (optional)

If you deploy a worker using the worker-led method described above, you must register the Boundary workers to a controller.

<Tabs>

<Tab heading="Admin UI">

Complete the following steps to register the worker using the UI:

1. Log in to Boundary as the admin user.

1. Select **Workers** in the navigation pane.

1. Click **New**.

1. (Optional) You can use the workers page to construct the contents of the `worker.hcl` file, if you did not [create the configuration file](/boundary/docs/deploy/self-managed/deploy-workers#create-the-worker-configurations) as part of the installation process above.
Provide the following details, and Boundary constructs the worker configuration file for you:
   - Boundary Cluster ID
   - Worker Public Address
   - Config file path
   - Worker Tags

1. Scroll to the bottom of the **New Worker** page, and paste the **Worker Auth Registration Request** key.
Boundary provides you with the **Worker Auth Registration Request** key in the CLI output when you start the worker.
You can also locate this value in the `auth_request_token` file.

1. Click **Register Worker**.

1. Click **Done**.

  The new worker appears on the **Workers** page.

1. Repeat the registration process for any other workers, such as the intermediate and egress workers.

</Tab>

<Tab heading="CLI">

Complete the following steps to register the worker using the CLI:

1. Use the following command to ensure that the `BOUNDARY_ADDR` is set as an environment variable:

  ```hcl
  $ export BOUNDARY_ADDR="https://c3a7a20a-f663-40f3-a8e3-1b2f69b3625.boundary.hashicorp.cloud"
  ```

1. Log into the CLI as the admin user, providing the Auth Method ID, admin login name, and admin password when prompted.

  ```hcl
  $ boundary authenticate password \
    -auth-method-id=ampw_KfLAjMS2CG \
    -login-name=admin
  ```

  Example:

  <CodeBlockConfig hideClipboard>

  ```hcl
  $ boundary authenticate password \
    -auth-method-id=ampw_KfLAjMS2CG \
    -login-name=admin
  Please enter the password (it will be hidden):

  Authentication information:
    Account ID:      acctpw_r6crEm0FgM
    Auth Method ID:  ampw_KfLAjMS2CG
    Expiration Time: Mon, 27 Jun 2022 22:03:28 MDT
    User ID:         u_ysJd0LXX9T

   The token was successfully stored in the chosen keyring and is not displayed here.
  ```

  </CodeBlockConfig>

1. Next, use the following command to export the **Worker Auth Request Token** value as an environment variable:

  ```shell-session
  $ export WORKER_TOKEN=<Worker Auth Registration Request Value>
  ```

  Boundary provides you with the **Worker Auth Registration Request** key in the CLI output when you start the worker.
  You can also locate this value in the `auth_request_token` file.

  The token is used to issue a create worker request that authorizes the worker to Boundary and makes it available.
  Currently worker creation is only supported for workers with an authorization token (worker-led and controller-led).

1. Create a new worker using the worker-led registration method with the following command:

  ```shell-session
  $ boundary workers create worker-led -worker-generated-auth-token=$WORKER_TOKEN

  Worker information:
    Active Connection Count:   0
    Created Time:              Fri, 03 Jan 2025 13:52:04 MST
    ID:                        w_zLGjAbYx1h
    Local Storage State:       unknown
    Type:                      pki
    Updated Time:              Fri, 03 Jan 2025 13:52:04 MST
    Version:                   1

    Scope:
      ID:                      global
      Name:                    global
      Type:                    global

    Authorized Actions:
      no-op
      read
      update
      delete
      add-worker-tags
      set-worker-tags
      remove-worker-tags
  ```

  Confirm the worker registration and view its details by executing the following command and supplying the new worker's id:

  ```shell-session
  $ boundary workers read -id w_zLGjAbYx1h

  Worker information:
    Active Connection Count:   0
    Address:                   127.0.0.1:9202
    Created Time:              Fri, 03 Jan 2025 13:52:04 MST
    ID:                        w_zLGjAbYx1h
    Last Status Time:          2025-01-03 20:58:41.346537 +0000 UTC
    Local Storage State:       not configured
    Release Version:           Boundary v0.18.1+ent
    Type:                      pki
    Updated Time:              Fri, 03 Jan 2025 13:58:41 MST
    Version:                   1

    Scope:
      ID:                      global
      Name:                    global
      Type:                    global

    Tags:
      Configuration:
        type: ["worker1" "upstream"]
      Canonical:
        type: ["upstream" "worker1"]

    Authorized Actions:
      add-worker-tags
      set-worker-tags
      remove-worker-tags
      no-op
      read
      update
      delete
  ```

1. Repeat the registration process for any other workers, such as the intermediate and egress workers.

</Tab>
</Tabs>

## Troubleshooting

Common issues when deploying and registering Boundary workers include:

- **Expired `auth_request_token`**: The Worker Auth Registration Request token is time-limited. If registration fails because the token has expired, restart the worker to generate a new token and repeat the registration steps.
- **Worker fails to register**: Confirm that the worker's configuration file references the correct KMS key or authorization method for its registration flow (worker-led, controller-led, or KMS), and that the controller's cluster listener is reachable from the worker's network boundary.

## Next steps

After you configure workers, you should:

1. [Initialize Boundary](/boundary/docs/deploy/self-managed/initialize)
1. [Install the Boundary Clients](/boundary/docs/deploy/install-clients)